# cryptoa_rattrapage

./: README.md  data.ipynb  data_3.csv  examine.ipynb  examine.py  hash.ipynb  nb.ipynb  prototype.py  pyproject.toml  real.ipynb  repaint.ipynb
crypto_rat/: __init__.py  __main__.py  ascii.py  attacks.py  cli.py  factory.py  hash.py  number_theory.py  schwa.txt
rat/: __init__.py  attacks.py  challenge.py  deal.py  exceptions.py  factory.py  hash.py  number_theory.py  prototype.py
rat/tests/: test_inv.py  test_more_schwa.py  test_schwa.py
report/: rapport.typ  report.typ
